5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1753_3095.log
== TEST (2019-05-16 19:11:10) 
-- CODE:
V=3
E=2
D=1
 X=input(float(""))
-- ERROR:
File "XXXX", line 4
    X=input(float(""))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:11:16) 
-- CODE:
V=3
E=2
D=1
 X=input(float(""))
-- ERROR:
File "XXXX", line 4
    X=input(float(""))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:47) 
-- CODE:
V=3
E=2
D=1
-- ERROR:
File "XXXX", line 4
    X=input(float(""))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:15:55) 
-- CODE:
V=3
E=2
D=1
X= else("")
-- ERROR:
File "XXXX", line 4
    X= else("")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:38) 
-- CODE:
V=3
E=2
D=1
X= print("V<3 e vitoria,")
-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:10) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:11) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:12) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:12) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:13) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:13) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:13) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:14) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:14) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:15) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:15) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:16) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:16) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:17) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:17) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:17) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:18) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:18) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:18) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:19) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:30:19) 
-- CODE:
V=3
E=2
D=1

-- OUTPUT:
V<3 e vitoria,
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:32:35) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:41) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:41) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:41) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:42) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:42) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:42) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:42) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:42) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:43) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:43) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:43) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:46) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:47) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:47) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:47) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:47) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:48) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:48) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:48) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:49) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:49) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:49) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:50) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:50) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:51) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:51) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:52) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:52) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:53) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:54) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:54) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:55) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:55) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:56) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:57) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:57) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:58) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:58) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:59) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:59) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:00) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:00) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:01) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:02) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:02) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:03) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:03) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:03) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:04) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:05) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:05) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:05) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:06) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:07) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:07) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:08) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:09) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:09) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:09) 
-- CODE:
qinf=if
-- ERROR:
File "XXXX", line 1
    qinf=if
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
